--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "array_reverse.js",
   "scripts": {
     "lint": "eslint **/*.js",
-    "test": "jest ./__test__/lib/stacks-and-queues/challenge-04 --verbose --coverage",
-    "test-watch": "jest ./__test__/lib/stacks-and-queues/challenge-04 --watchAll --verbose --coverage"
+    "start": "node index.js",
+    "test": "jest ./__test__/lib/trees/binary-trees/binary-tree.test.js --verbose --coverage",
+    "test-watch": "jest ./__test__/lib/trees/binary-trees/binary-tree.test.js --watchAll --verbose --coverage", 
+    "watch": "nodemon index.js"
   },
   "repository": {
     "type": "git",
