--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint": "eslint **/*.js",
     "start": "node index.js",
-    "test": "jest ./__test__/lib/trees/challenge-03/btree-max-value.test.js --verbose --coverage",
-    "test-watch": "jest ./__test__/lib/trees/challenge-03/btree-max-value.test.js --watchAll --verbose --coverage", 
+    "test": "jest --verbose --coverage",
+    "test-watch": "jest ./__test__/lib/trees/k-ary-trees/k-ary-tree.test.js --watchAll --verbose --coverage", 
     "watch": "nodemon index.js"
   },
   "repository": {
