--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint **/*.js",
     "start": "node index.js",
     "test": "jest --verbose --coverage",
-    "test-watch": "jest ./__test__/lib/trees/k-ary-trees/k-ary-tree.test.js --watchAll --verbose --coverage", 
+    "test-watch": "jest ./__test__/lib/trees/k-ary-trees/k-ary-tree.test.js --watchAll --verbose --coverage",
     "watch": "nodemon index.js"
   },
   "repository": {
@@ -24,6 +24,8 @@
     "babel-eslint": "^8.2.3",
     "babel-register": "^6.26.0",
     "eslint": "^4.19.1",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "string-hash": "^1.1.3",
+    "uuid": "^3.2.1"
   }
 }
