--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,41 +1,69 @@
 {
-  "env": {
-    "browser": true,
-    "node": true,
-    "commonjs": true,
-    "jest": true,
-    "es6": true
-  },
-  "globals": {
-    "err": true,
-    "req": true,
-    "res": true,
-    "next": true
-  },
-  "extends": "eslint:recommended",
-  "parserOptions": {
-    "sourceType": "module"
-  },
-  "rules": {
-    "no-console": "off",
-    "indent": [
-      "error",
-      2
+    "env": {
+      "browser": true,
+      "node": true,
+      "commonjs": true,
+      "jest": true,
+      "es6": true
+    },
+    "globals": {
+      "err": true,
+      "req": true,
+      "res": true,
+      "next": true,
+      "__API_URI__": false,
+      "__TITLE__": false,
+      "__DEBUG__": false
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended"
     ],
-    "quotes": [
-      "error",
-      "single",
-      {
-        "allowTemplateLiterals": true
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaVersion": 6,
+      "ecmaFeatures": {
+        "experimentalObjectRestSpread": true,
+        "module": true,
+        "jsx": true
       }
-    ],
-    "comma-dangle": [
-      "error",
-      "always-multiline"
-    ],
-    "semi": [
-      "error",
-      "always"
+    },
+    "rules": {
+      "no-console": "off",
+      "no-unused-vars": "off",
+      "indent": [
+        "error",
+        2,
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "react/prop-types": [
+        0
+      ],
+      "quotes": [
+        "error",
+        "single",
+        {
+          "allowTemplateLiterals": true
+        }
+      ],
+      "space-infix-ops": [
+        "error",
+        {
+          "int32Hint": false
+        }
+      ],
+      "comma-dangle": [
+        "error",
+        "always-multiline"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ]
+    },
+    "plugins": [
+      "react"
     ]
   }
-}
